hphp/hack/test/typecheck/await_in_expressions10.php.exp
ERROR: File "await_in_expressions10.php", line 4, characters 14-28:
`await` cannot be used as an expression right of a pipe operator, unless unstable feature: `pipe_await` is enabled. (Parsing[1002])
